# comp590-artifacts

./: .gitlab-ci-example.yml  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  environment.yaml  install_dependencies.cmd  install_dependencies.sh
openvibe/designer/: .gitignore  CMakeLists.txt  README.md
openvibe/designer/applications/platform/designer/: CMakeLists.txt
openvibe/designer/cmake-modules/: FindLibMensiaAdvancedVisualisation.cmake  FindOpenViBEPluginsGlobalDefines.cmake  FindOpenViBEVisualizationToolkit.cmake  FindSourceDependencyJSON.cmake  FindThirdPartyGSL.cmake  FindThirdPartyX11.cmake  OvAddProjects.cmake  OvDelayLoad.cmake  SkipEverything.cmake
openvibe/designer/cmake-modules/launchers/: resource-file.rc-base
openvibe/designer/dependencies-source/json/: json.cpp  json.h
openvibe/designer/libraries/: CMakeLists.txt
openvibe/designer/libraries/lib-advanced-visualization/: CMakeLists.txt
openvibe/designer/libraries/lib-advanced-visualization/include/: C3DMesh.hpp  CRendererBars.hpp  CRendererBitmap.hpp  CRendererConnectivity.hpp  CRendererCube.hpp  CRendererFlower.hpp  CRendererLine.hpp  CRendererLoreta.hpp  CRendererMountain.hpp  CRendererMultiLine.hpp  CRendererSlice.hpp  CRendererTopo.hpp  CRendererTopo2D.hpp  (+3 more)
openvibe/designer/plugins/examples/: CMakeLists.txt
openvibe/designer/plugins/visualization/: CMakeLists.txt
openvibe/designer/visualization-toolkit/: CMakeLists.txt
openvibe/designer/visualization-toolkit/src/: ovvizCVisualizationContext.cpp  ovvizCVisualizationContext.hpp  ovvizColorGradient.cpp  ovviz_main.cpp
openvibe/extras/applications/OVParameters/: CMakeLists.txt  parameterBool.cpp  parameterBool.h  parameterDouble.cpp  parameterDouble.h  parameterInt.cpp  parameterInt.h  parameterListString.cpp  parameterListString.h  parameterString.cpp  parameterString.h  parameterTraits.cpp  parameterTraits.h  parameters.h
openvibe/extras/applications/OVParametersQml/: BoolParameter.qml  Button.qml  CMakeLists.txt  ComboBox.qml  ComboBoxDelegate.qml  Icon.qml  Icons.js  ListParameter.qml  NumericParameter.qml  Panel.qml  Parameters.qml  Slider.qml  StringParameter.qml  TextField.qml  ToolTip.qml
openvibe/extras/applications/OVStyle/: CMakeLists.txt  Style.qml  style.qml.js
openvibe/extras/modules/eigen/: CMakeLists.txt
openvibe/extras/modules/geometry/: CMakeLists.txt
openvibe/extras/modules/lsl/: CMakeLists.txt
openvibe/extras/modules/tcptagging/: CMakeLists.txt
openvibe/sdk/build-tool/stimulation-generator/: CMakeLists.txt
openvibe/sdk/common/: CMakeLists.txt
openvibe/sdk/common/include/: m_ConverterUtf8.h  ovCResampler.h  ov_common_defines.h  ovp_global_defines.h
openvibe/sdk/common/src/: main.cpp
openvibe/sdk/kernel/: CMakeLists.txt
openvibe/sdk/kernel/share/: openvibe.conf
openvibe/sdk/kernel/src/: ovk_base.h  ovk_defines.h  ovk_main.cpp  ovk_tools.h
openvibe/sdk/modules/communication/: CMakeLists.txt
openvibe/sdk/modules/csv/: CMakeLists.txt
openvibe/sdk/modules/ebml/: CMakeLists.txt
openvibe/sdk/modules/system/: CMakeLists.txt
openvibe/sdk/openvibe/: CMakeLists.txt
openvibe/sdk/openvibe/doc/: Groups.dox  Namespaces.dox
openvibe/sdk/openvibe/src/: CErrorManager.cpp  CIdentifier.cpp  CKernelLoader.cpp  CMatrix.cpp  CMemoryBuffer.cpp  CNameValuePairList.cpp  CTime.cpp  ovCObservable.cpp  ovCString.cpp  ov_main.cpp
openvibe/sdk/toolkit/: CMakeLists.txt
openvibe/sdk/toolkit/src/: ovtk_main.cpp
openvibe/sdk/unit-test/: CMakeLists.txt
openvibe/sdk/unit-test/common/: ovtKernelContext.cpp  ovtKernelContext.h
openvibe/sdk/unit-test/openvibe-module-csv/: CMakeLists.txt  uoCSVReaderTest.cpp  uoCSVWriterTest.cpp
openvibe/sdk/unit-test/openvibe-module-ebml/: CMakeLists.txt  uoEBMLReaderTest.cpp  uoEBMLWriterTest.cpp
openvibe/sdk/unit-test/openvibe-module-fs/: CMakeLists.txt  uoEntryEnumeratorTest.cpp  uoFilesTest.cpp  uoFilesTestUTF.cpp
openvibe/sdk/unit-test/openvibe-module-socket/: CMakeLists.txt  uoSocketClientServerASyncCommunicationTest.cpp  uoSocketClientServerBaseTest.cpp  uoSocketClientServerSyncCommunicationTest.cpp
openvibe/sdk/unit-test/openvibe-module-system/: CMakeLists.txt  uoDynamicModuleTest.cpp  uoTimeTest.cpp
openvibe/sdk/unit-test/openvibe-module-xml/: CMakeLists.txt  uoXMLReaderTest.cpp  uoXMLWriterTest.cpp
openvibe/sdk/unit-test/openvibe-plugin-stream-codecs/: CMakeLists.txt  uoStreamedMatrixTest.cpp
openvibe/sdk/unit-test/openvibe-toolkit/: CMakeLists.txt  uoMatrixToolkitTest.cpp  urExportScenarioToFileTest.cpp  urImportScenarioFromFileTest.cpp  urSimpleTestScenarioDefinition.h  urValidateScenarioTest.cpp
openvibe/sdk/unit-test/ov-base/: CErrorManagerTest.hpp  CIdentifierTest.hpp  CMakeLists.txt  CMatrixTest.hpp  CNameValuePairListTest.hpp  CStimulationSetTest.hpp  CTimeTest.hpp  main.cpp  utils.hpp
openvibe/sdk/unit-test/unit-toolkit/: CMakeLists.txt
openvibe/sdk/validation-test/: CMakeLists.txt  CTestCustom.cmake.in
openvibe/sdk/validation-test/openvibe-classification-lda/: CMakeLists.txt  LDA-Classification.xml.in  LDA-Native.xml.in  LDA-Onevsall.xml.in  LDA-Onevsone-HT.xml.in  LDA-Onevsone-PKPD.xml.in  LDA-Onevsone-Voting.xml.in
openvibe/sdk/validation-test/openvibe-file-io-csv/: CMakeLists.txt  empty-labels-matrix.xml.in  empty-labels-vector.xml.in  features.xml.in  input-empty-labels-matrix.csv  input-empty-labels-vector.csv  input-features.csv  input-signal-badtimes.csv  input-signal.csv  input-spectrum.csv  input-stimulation.csv  input-streamed-matrix.csv  signal-badtimes.xml.in  signal.xml.in  spectrum.xml.in  stimulation.xml.in  streamed-matrix.xml.in  vector-matrix.xml.in
openvibe/sdk/validation-test/openvibe-file-io-openvibe/: CMakeLists.txt  read-write.xml.in
openvibe/sdk/validation-test/openvibe-regularized-csp/: CMakeLists.txt  regularized-csp-train.xml.in  regularized-csp.xml.in
openvibe/sdk/validation-test/openvibe-stimulation-timeout/: CMakeLists.txt  reference.csv  sinus-oscillator-1s.csv  timeout.xml.in
openvibe/sdk/validation-test/python-toolkit/: accuracy.py  classification.py  csv-analyser.py  csv-comparator.py
(+2375 files in other folders)
